--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.18.0",
     "express": "^4.16.4",
     "vue": "^2.5.22",
+    "vue-axios": "^2.1.4",
     "vue-router": "^3.0.1",
     "vuetify": "^1.4.4",
     "vuex": "^3.0.1"
